--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for(@post) do |f| %>
-  <% if @post.errors.any? %>
+<%= form_for(@comment) do |f| %>
+  <% if @comment.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
+      <h2><%= pluralize(@comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
 
       <ul>
-      <% @post.errors.full_messages.each do |message| %>
+      <% @comment.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
@@ -15,12 +15,10 @@
     <%= f.label :title %><br>
     <%= f.text_field :title %>
   </div>
-
   <div class="field">
-    <%= f.label :photo %><br>
-    <%= f.file_field :photo %>
+    <%= f.label :boby %><br>
+    <%= f.text_field :boby %>
   </div>
-  
   <div class="actions">
     <%= f.submit %>
   </div>
